# aws-mcp-automation

./: .gitignore  README.md  docker-compose.yaml  init_database.sql  requirements.txt  sample_dialogue.md
api/: client.py  server.py  tester.py
aws_knowledge_base/: chroma.sqlite3
client_mcp/: README.md  client.py  pyproject.toml
client_mcp/aws_knowledge_base/: chroma.sqlite3
cloud_helper/: mcp_server.py  pyproject.toml
data_scraper/: README.md  website-transcribe.ipynb
website/: package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx  providers.tsx
website/app/api/auth/[...nextauth]/: route.ts
website/app/auth/signin/: page.tsx
website/app/aws/: page.tsx
website/app/chat/: page.tsx
website/app/docs/: page.tsx
website/app/help/: page.tsx
website/app/query/: page.tsx
website/components/chat/: chat-input.tsx  chat-message.tsx
website/components/ui/: navigation.tsx
website/lib/: api.ts
